data/derived/sp14/progs/unify/prog1226.ml.out
Characters 108-149:
  (hd*i mod 10)::(hd*i/10 + mBDhelper i tl)
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
